--- a/about.html
+++ b/about.html
@@ -203,7 +203,7 @@
 							</div>
 							<div class="col-md-9">
 							<p class="fh5co-lead">Want to work together?</p>															
-								<p>Drop me a line at <a href="mailto:hello@virginia-yu.com">hello@virginia-yu.com</a></p>
+								<p>Drop me a line at <a href="mailto:missyudesigns@gmail.com">missyudesigns@gmail.com</a></p>
 									
 									<p>CV available upon request.</p>						
 								</ul>
