--- a/about.html
+++ b/about.html
@@ -134,7 +134,7 @@
 								<figure class="fh5co-bio-photo"><img src="images/profile.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template"></figure>
 							</div>
 							<p></p>
-								<p class="fh5co-lead">A creative problem solver who has a curiosity for human behavior. I love working with people and learning what makes them tick. With a diverse background in design, branding, digital  marketing and eCommerce, I am always looking to create solutions for the best possible user experience. I am dedicated to creating a positive impact in our society through a user centric approach.</p>
+								<p class="fh5co-lead">A creative problem solver who has a curiosity for human behavior. I love working with people and learning what makes them tick. With a diverse background in design, research, branding, and digital marketing, I am always looking to create solutions for the best possible user experience. I am dedicated to creating a positive impact in our society through a user centric approach.</p>
 			<p>A global citizen who possesses remarkable foreign language skills and intercultural sensibility. Multicultural awareness is vital in understanding and empathizing with end users from all parts of the world and collaborating with international clients.</p>
 			<p>A world traveler who has a thirst for adventure. Aside from user experience, traveling is one of my biggest passions. I love exploring new countries, being outside of my comfort zone, learning about people from all around the world and picking up new languages. I believe these interactions give me a unique perspective to propel my creative solutions to the next level.</p>
 			<p><div class="row row-bottom-padded-sm animate-box">
